third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_parens_around_name.exp

Diagnostics:
error: Calls to function values other than inline function parameters not yet supported
  ┌─ tests/more-v1/parser/invalid_call_lhs_parens_around_name.move:3:9
  │
3 │         (foo)()
  │         ^^^^^^^
